--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -31,3 +31,10 @@ server.ssl.key-password=test#1234
 server.ssl.key-alias=jwtdemo
 server.port=8443
 
+
+#Java Mail Sender Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=saidarshanonline24@gmail.com
+spring.mail.password=<your-password-generated>
+
